<resources>
    <string name="app_name">Login</string>
    <string name="user">用户名：</string>
    <string name="pwd">密  码：</string>
    <string name="register">用户注册</string>
    <string name="sex">性  别：</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="hobby">爱  好：</string>
    <string name="playball">打球</string>
    <string name="sing">唱歌</string>
    <string name="dance">跳舞</string>
    <string name="regiter">注册</string>
</resources>
